--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/github.png":["assets/images/github.png"],"assets/images/linkedin.png":["assets/images/linkedin.png"],"assets/images/test.gif":["assets/images/test.gif"],"assets/images/ubuntu.png":["assets/images/ubuntu.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
